--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,6 @@ Depends: R (>= 3.4.2)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: Matrix
+Imports: Matrix, dbplyr, dplyr, tidyr, glmnet
 Suggests: testthat
+RoxygenNote: 6.0.1
