--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Depends: R (>= 3.4.2)
 License: Apache-2.0
 Encoding: UTF-8
 LazyData: true
-Imports: Matrix, dbplyr, dplyr, tidyr, glmnet, futile.logger
-Suggests: testthat, DBI, RPostgresSQL
+Imports: Matrix, dplyr, tidyr, glmnet, futile.logger
+Suggests: testthat, DBI, dbplyr, RPostgresSQL, RSQLite
 RoxygenNote: 6.0.1
