--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,5 @@ License: Apache-2.0
 Encoding: UTF-8
 LazyData: true
 Imports: Matrix, dplyr, tidyr, glmnet, futile.logger
-Suggests: testthat, DBI, dbplyr, RPostgresSQL, RSQLite
+Suggests: testthat, DBI, dbplyr, RPostgreSQL, RSQLite
 RoxygenNote: 6.0.1
