Added method to use ancestor concepts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(defineBRParameters)
 export(fitBaselineRegularization)
 export(prepareBRDataFromEras)
 export(prepareBRDataFromOccurrence)
+export(useAncestorConcepts)
 import(Matrix)
 import(dplyr)
 import(futile.logger)
