--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,8 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+# RStudio & Project files
 .Rproj.user
 BaselineRegularization.Rproj
+# Mac
+.DS_Store
