Added rlang import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(useAncestorConcepts)
 import(Matrix)
 import(dplyr)
 import(futile.logger)
+import(rlang)
 useDynLib(BaselineRegularization, .registration = TRUE)
