--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Depends: R (>= 3.0.0)
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: Matrix, dplyr, tidyr, glmnet, futile.logger
+Imports: rlang, Matrix, dplyr, tidyr, glmnet, futile.logger
 Suggests: testthat, DBI, dbplyr, RPostgreSQL, RSQLite
 RoxygenNote: 6.0.1
