New workflow properly handling lasting risk window, other risk windows broken, sqlite broken

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ import(Matrix)
 import(dplyr)
 import(futile.logger)
 import(rlang)
+importFrom(rlang,.data)
 useDynLib(BaselineRegularization, .registration = TRUE)
