--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,12 @@ Authors@R: c(
   person("Yuriy", "Sverchkov", email = "yuriy.sverchkov@wisc.edu", role = c("aut", "cre")),
   person("Charles", "Kwong", email = "zhaobin.kuang@gmail.com", role = "aut" ) )
 Description: Implementation of Baseline Regularization by Zhaobin et al. (KDD 2017) targeted to work with OMOP databases.
-Depends: R (>= 3.0.0)
 License: file LICENSE
+URL: https://github.com/sverchkov/BaselineRegularization
+BugReports: https://github.com/sverchkov/BaselineRegularization/issues
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 3.0.0)
 Imports:
   rlang (>= 0.2),
   Matrix (>= 1.2),
