Main vignette mostly done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(defineBRParameters)
 export(fitBaselineRegularization)
 export(getCoefficients)
 export(prepareBRDataFromEras)
+export(prepareBRDataFromEvents)
 export(prepareBRDataFromOccurrence)
 export(useAncestorConcepts)
 import(Matrix)
