vignette and doc update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(prepareBRDataFromEvents)
 import(Matrix)
 import(dplyr)
 import(futile.logger)
+importFrom(rlang,"!!")
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 useDynLib(BaselineRegularization, .registration = TRUE)
